# Pixloop

./: .gitignore  requirements.txt  todos_los_launch.txt  usb_cam-test.launch
accel_brake_map_calibrator/: CMakeLists.txt  README.md  package.xml
accel_brake_map_calibrator/config/: accel_brake_map_calibrator.yaml  log.csv
accel_brake_map_calibrator/include/accel_brake_map_calibrator/: accel_brake_map_calibrator_node.h
accel_brake_map_calibrator/launch/: accel_brake_map_calibrator.launch
accel_brake_map_calibrator/plot/: plot_map.py
accel_brake_map_calibrator/rviz/: occupancy.rviz
accel_brake_map_calibrator/src/: accel_brake_map_calibrator_node.cpp  main.cpp
accel_brake_map_calibrator/srv/: SaveCalibration.srv
basic_comms/: CMakeLists.txt  package.xml
catkin_ws_control/hooke2.0/catkin_ws_control/: TrajectoryDynamicCosts.cpp  can_pix.txt
catkin_ws_control/hooke2.0/catkin_ws_control/src/pix_driver-robobus/: CMakeLists.txt
catkin_ws_control/hooke2.0/catkin_ws_control/src/pix_driver-robobus/src/: command_node.cc
catkin_ws_control/hooke2.0/catkin_ws_control/src/raw_vehicle_cmd_converter-master/data/: brake_map.csv
catkin_ws_control/src/pix_driver-robobus/: package.xml
catkin_ws_control/src/pix_driver-robobus/launch/: pix_driver.launch
catkin_ws_control/src/pix_driver-robobus/src/: Apollo_ACU.dbc
catkin_ws_control/src/pix_driver_msgs-master/: CMakeLists.txt  package.xml
catkin_ws_control/src/raw_vehicle_cmd_converter-master/data/: accel_map.csv
catkin_ws_control2/hooke2.0/: dev_kit_pix_hooke2.0_calibration_table.pb.txt  parse.py
catkin_ws_control2/hooke2.0/catkin_ws_control/: op_common_params.launch
catkin_ws_control2/hooke2.0/catkin_ws_control/src/raw_vehicle_cmd_converter-master/: CMakeLists.txt  package.xml
catkin_ws_control2/hooke2.0/catkin_ws_control/src/raw_vehicle_cmd_converter-master/include/raw_vehicle_cmd_converter/: node.hpp
catkin_ws_control2/hooke2.0/catkin_ws_control/src/raw_vehicle_cmd_converter-master/src/: node.cpp
catkin_ws_control2/src/pix_driver-robobus/src/: control_converter.py  control_converter_speed.py  report_converter.py  throttle_command_100.cc
catkin_ws_control2/src/raw_vehicle_cmd_converter-master/src/: node.cpp
catkin_ws_sensor/: 2025-05-28-17-58-31.bag.active
catkin_ws_sensor/src/ars408_ros-master/: CMakeLists.txt
catkin_ws_sensor/src/ars408_ros-master/launch/: multi_device_throttle.launch
catkin_ws_sensor/src/cgi_driver-master/: CMakeLists.txt  README.md  package.xml
catkin_ws_sensor/src/cgi_driver-master/launch/: cgi_driver.launch
catkin_ws_sensor/src/cgi_driver-master/src/: cgi_reader.py
catkin_ws_sensor/src/mc_radar/Efficiency_script-main/: ultrasonic_trigger_pynode.py
catkin_ws_sensor/src/mc_radar/launch/: mc_radar.launch
catkin_ws_sensor/src/mc_radar/scripts/: mc_radar_detect.py
catkin_ws_tec/rviz/: rviz_pose_sim.rviz
catkin_ws_tec/src/fis/: CMakeLists.txt  package.xml
catkin_ws_tec/src/fis/src/: carrito.py
catkin_ws_tec/src/lidar3d_clustering/: CMakeLists.txt  package.xml
catkin_ws_tec/src/lidar3d_clustering/launch/: clustering.launch
catkin_ws_tec/src/lidar3d_clustering/src/: ObjectDetection.cpp
catkin_ws_tec/src/pointscloud_detector/: CMakeLists.txt  package.xml
catkin_ws_tec/src/pointscloud_detector/launch/: detector.launch
catkin_ws_tec/src/pointscloud_detector/src/: PointsDectector.cpp
catkin_ws_tec/src/pose_sim_rviz/: CMakeLists.txt  package.xml
catkin_ws_tec/src/pose_sim_rviz/launch/: show_pose.launch
catkin_ws_tec/src/voxel_grid_filter/: CMakeLists.txt  package.xml
catkin_ws_tec/src/voxel_grid_filter/launch/: voxel_grid.launch
catkin_ws_tec/src/voxel_grid_filter/src/: VoxelGrid.cpp
catkin_ws_tec/src/yolov5_cpp/: CMakeLists.txt  package.xml
catkin_ws_tec/src/yolov5_cpp/launch/: yolov5.launch  yolov5_zed.launch
catkin_ws_tec/src/yolov5_cpp/src/: yolov5.cpp
catkin_ws_tec/src/yolov5_cpp/yoloFiles/: yolov5s.onnx
catkin_ws_tec/src/yolov8_py/: CMakeLists.txt  package.xml
catkin_ws_tec/src/yolov8_py/launch/: yolov8.launch
catkin_ws_tec/src/yolov8_py/scripts/: yolov8NiagaraBetter.py
dropbox/prueba_mecanicos_1/: CMakeLists.txt  package.xml
dropbox/scripts/: data_reader.m  prueba7_waypoints.csv
dropbox/wp_viewer/: prueba2_waypoints.csv  wp_reader.py
gnss/gnss_conv/: geo_extract_bag.py  geo_pos_conv.cpp
pix-kit-archprop/: .gitmodules  README.md  start.sh
pix-kit-archprop/scripts/: scripts_deploy_perception_models.sh
pix-kit-archprop/scripts/release/: release_candidate.sh
pix-kit-archprop/src/autoware/launcher/autoware_launch/launch/: autoware.launch
pix-kit-archprop/src/autoware/launcher/sensing_launch/launch/: oslidar.launch  zed2i.launch
pix-kit-archprop/src/autoware/launcher/sensing_launch/launch/sweeper/: camera.launch  (+1 more)
pix-kit-archprop/src/autoware/launcher/vehicle_launch/launch/: vehicle_interface.launch
pix-kit-archprop/src/pix-citybot-v2-descriptions/: .gitignore  README.md
pix-kit-archprop/src/pix-citybot-v2-descriptions/sensor/sensor_description/hooke_sensor_kit_description/: CMakeLists.txt  package.xml
pix-kit-archprop/src/pix-citybot-v2-descriptions/sensor/sensor_description/hooke_sensor_kit_description/config/: sensors_calibration.yaml
pix-kit-archprop/src/pix-citybot-v2-descriptions/sensor/sensor_description/hooke_sensor_kit_description/urdf/: sensors.xacro
pix-kit-archprop/src/pix-citybot-v2-descriptions/vehicle/hooke_description/: CMakeLists.txt  README.md  package.xml
pix-kit-archprop/src/pix-citybot-v2-descriptions/vehicle/hooke_description/config/: mirror.yaml  simulator_model.yaml  vehicle_info.yaml
pix-kit-archprop/src/pix-citybot-v2-descriptions/vehicle/hooke_description/launch/: vehicle_interface.launch
pix-kit-archprop/src/pix-citybot-v2-descriptions/vehicle/hooke_description/urdf/: vehicle.xacro
pix-kit-archprop/src/pix-citybot-v2-descriptions/vehicle/lexus_description/config/: vehicle_info.yaml
yolo_ros/: CMakeLists.txt  package.xml
yolo_ros/config/: yolo_params.yaml
yolo_ros/launch/: yolo_inference.launch
yolo_ros/msg/: BoundingBox.msg
yolo_ros/scripts/: yolo_inference_node.py
(+11 files in other folders)
