<?xml version="1.0"?>
<package format="2">
  <name>yolo_ros</name>
  <version>0.0.1</version>
  <description>YOLO ROS integration using custom messages</description>

  <maintainer email="danielcolingarcia@outlook.com">Daniel Colín García</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
  </export>
</package>
