<?xml version="1.0"?>
<package format="2">
  <name>hooke_description</name>
  <version>0.1.0</version>
  <description>The hooke_description package</description>

  <maintainer email="mark@pixmoving.net">Mark Jin</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
